--- a/paginas/sportrecife.html
+++ b/paginas/sportrecife.html
@@ -2,25 +2,81 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Sport Recife - Série B 2025</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sport Club do Recife - Série B 2025</title>
+  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto&display=swap" rel="stylesheet">
   <style>
     body {
-      background-color: #D00000;
-      color: #000000;
-      font-family: Verdana, sans-serif;
-      text-align: center;
-      padding: 30px;
+      margin: 0;
+      padding: 0;
+      font-family: 'Roboto', sans-serif;
+      background: linear-gradient(to bottom, #D00000, #000000);
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
     }
-    img {
-      width: 150px;
+
+    header {
+      padding: 20px;
+      text-align: center;
+    }
+
+    header h1 {
+      font-family: 'Anton', sans-serif;
+      font-size: 2.8em;
+      margin: 0;
+      text-shadow: 2px 2px #000000;
+    }
+
+    .logo {
+      margin: 20px 0;
+      filter: drop-shadow(2px 2px 5px #000);
+    }
+
+    section {
+      background-color: rgba(255, 255, 255, 0.1);
+      padding: 20px;
+      border-radius: 15px;
+      width: 90%;
+      max-width: 600px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+    }
+
+    p {
+      font-size: 1.2em;
+      line-height: 1.6em;
+    }
+
+    strong {
+      color: #FFD700;
+    }
+
+    footer {
+      margin-top: auto;
+      padding: 15px;
+      font-size: 0.9em;
+      color: #ccc;
     }
   </style>
 </head>
 <body>
-  <h1>Sport Club do Recife</h1>
-  <img src="https://upload.wikimedia.org/wikipedia/pt/7/7a/Sport_Club_do_Recife.png" alt="Escudo Sport">
-  <p><strong>Cidade:</strong> Recife - PE</p>
-  <p><strong>Estádio:</strong> Ilha do Retiro</p>
-  <p><strong>Cores:</strong> Vermelho e Preto</p>
+  <header>
+    <h1>Sport Club do Recife</h1>
+    <img class="logo" src="https://upload.wikimedia.org/wikipedia/pt/7/7a/Sport_Club_do_Recife.png" alt="Escudo do Sport" width="150">
+  </header>
+
+  <section>
+    <p><strong>Cidade:</strong> Recife - PE</p>
+    <p><strong>Estádio:</strong> Ilha do Retiro</p>
+    <p><strong>Cores:</strong> Vermelho e Preto</p>
+    <p><strong>Fundação:</strong> 1905</p>
+    <p><strong>Torcida:</strong> Uma das maiores do Nordeste</p>
+  </section>
+
+  <footer>
+    Série B 2025 - Página oficial criada por Hubert
+  </footer>
 </body>
 </html>
