--- a/paginas/index.html
+++ b/paginas/index.html
@@ -10,8 +10,8 @@
         <div>
             <a href="sportrecife.html">sportrecife</a>
             <a href="paysandu.html">paysandu</a>
-            <a href=""></a>
-            <a href=""></a>
+            <a href="cearasc.html"></a>
+            <a href="america-mg.html"></a>
             <a href=""></a>
             <a href=""></a>
             <a href=""></a>
