--- a/paginas/index.html
+++ b/paginas/index.html
@@ -8,8 +8,8 @@
 <body>
     <main>
         <div>
-            <a href="sportrecife.html">sportrecife</a>
-            <a href="paysandu.html">paysandu</a>
+            <a href="coritiba.html">sportrecife</a>
+            <a href="goias.html">paysandu</a>
             <a href="cearasc.html"></a>
             <a href="america-mg.html"></a>
             <a href=""></a>
