--- a/paginas/index.html
+++ b/paginas/index.html
@@ -10,10 +10,10 @@
         <div>
             <a href="coritiba.html">sportrecife</a>
             <a href="goias.html">paysandu</a>
-            <a href="cearasc.html"></a>
-            <a href="america-mg.html"></a>
-            <a href=""></a>
-            <a href=""></a>
+            <a href="novorizontino.html"></a>
+            <a href="chapecoense.html"></a>
+            <a href="clubedoremo.html"></a>
+            <a href="criciuma.html"></a>
             <a href=""></a>
             <a href=""></a>
             <a href=""></a>
