--- a/paginas/index.html
+++ b/paginas/index.html
@@ -14,11 +14,11 @@
             <a href="chapecoense.html"></a>
             <a href="clubedoremo.html"></a>
             <a href="criciuma.html"></a>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
+            <a href="ciuaba.html"></a>
+            <a href="avai.html"></a>
+            <a href="vilanova.html"></a>
+            <a href="crb.html"></a>
+            <a href="athletico-pr.html"></a>
             <a href=""></a>
             <a href=""></a>
             <a href=""></a>
