--- a/paginas/index.html
+++ b/paginas/index.html
@@ -19,16 +19,16 @@
             <a href="vilanova.html"></a>
             <a href="crb.html"></a>
             <a href="athletico-pr.html"></a>
+            <a href="athleticoclub.html"></a>
             <a href=""></a>
+            <a href="atletico-go.html"></a>
+            <a href="america-mg.html"></a>
+            <a href="voltaredonda.html"></a>
             <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
+            <a href="paysandu.html"></a>
+            <a href="operarioferroviario.htm"></a>
+            <a href="amazonasfc.html"></a>
+            <a href="botafogo-sp.html"></a>
         </div>
     </main>
     
