--- a/paginas/index.html
+++ b/paginas/index.html
@@ -20,11 +20,10 @@
             <a href="crb.html"></a>
             <a href="athletico-pr.html"></a>
             <a href="athleticoclub.html"></a>
-            <a href=""></a>
+            <a href="operario.html"></a>
             <a href="atletico-go.html"></a>
             <a href="america-mg.html"></a>
             <a href="voltaredonda.html"></a>
-            <a href=""></a>
             <a href="paysandu.html"></a>
             <a href="operarioferroviario.htm"></a>
             <a href="amazonasfc.html"></a>
