--- a/paginas/index.html
+++ b/paginas/index.html
@@ -1,35 +1,103 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Clubes da Série B</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(120deg, #000000, #222222);
+      font-family: 'Roboto', sans-serif;
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
+    }
+
+    header {
+      padding: 40px 20px;
+      text-align: center;
+    }
+
+    h1 {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 2.5em;
+      color: #f2f2f2;
+      text-shadow: 2px 2px 4px #000;
+      margin-bottom: 10px;
+    }
+
+    main {
+      width: 100%;
+      max-width: 600px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 12px;
+      padding: 20px;
+    }
+
+    a {
+      background-color: rgba(255,255,255,0.08);
+      padding: 14px 20px;
+      border-radius: 10px;
+      color: #fff;
+      text-decoration: none;
+      font-size: 1em;
+      transition: background 0.3s;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.4);
+      min-width: 120px;
+      text-align: center;
+    }
+
+    a:hover {
+      background-color: #444;
+    }
+
+    footer {
+      margin-top: auto;
+      padding: 15px;
+      font-size: 0.85em;
+      color: #999;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
-    <main>
-        <div>
-            <a href="coritiba.html">sportrecife</a>
-            <a href="goias.html">paysandu</a>
-            <a href="novorizontino.html"></a>
-            <a href="chapecoense.html"></a>
-            <a href="clubedoremo.html"></a>
-            <a href="criciuma.html"></a>
-            <a href="ciuaba.html"></a>
-            <a href="avai.html"></a>
-            <a href="vilanova.html"></a>
-            <a href="crb.html"></a>
-            <a href="athletico-pr.html"></a>
-            <a href="athleticoclub.html"></a>
-            <a href="operario.html"></a>
-            <a href="atletico-go.html"></a>
-            <a href="america-mg.html"></a>
-            <a href="voltaredonda.html"></a>
-            <a href="paysandu.html"></a>
-            <a href="operarioferroviario.htm"></a>
-            <a href="amazonasfc.html"></a>
-            <a href="botafogo-sp.html"></a>
-        </div>
-    </main>
-    
+  <header>
+    <h1>Série B 2025</h1>
+    <p>Selecione seu clube</p>
+  </header>
+
+  <main>
+    <a href="coritiba.html">Coritiba</a>
+    <a href="goias.html">Goiás</a>
+    <a href="novorizontino.html">Novorizontino</a>
+    <a href="chapecoense.html">Chapecoense</a>
+    <a href="clubedoremo.html">Clube do Remo</a>
+    <a href="criciuma.html">Criciúma</a>
+    <a href="ciuaba.html">Cuiabá</a>
+    <a href="avai.html">Avaí</a>
+    <a href="vilanova.html">Vila Nova</a>
+    <a href="crb.html">CRB</a>
+    <a href="athletico-pr.html">Athletico-PR</a>
+    <a href="athleticoclub.html">Athletic Club</a>
+    <a href="operario.html">Operário</a>
+    <a href="atletico-go.html">Atlético-GO</a>
+    <a href="america-mg.html">América-MG</a>
+    <a href="voltaredonda.html">Volta Redonda</a>
+    <a href="paysandu.html">Paysandu</a>
+    <a href="operarioferroviario.htm">Operário Ferroviário</a>
+    <a href="amazonasfc.html">Amazonas FC</a>
+    <a href="botafogo-sp.html">Botafogo-SP</a>
+  </main>
+
+  <footer>
+    Index criado por Hubert ⚽
+  </footer>
 </body>
 </html>
