--- a/paginas/index.html
+++ b/paginas/index.html
@@ -80,18 +80,18 @@
     <a href="chapecoense.html">Chapecoense</a>
     <a href="clubedoremo.html">Clube do Remo</a>
     <a href="criciuma.html">Criciúma</a>
-    <a href="ciuaba.html">Cuiabá</a>
+    <a href="cuiaba.html">Cuiabá</a>
     <a href="avai.html">Avaí</a>
     <a href="vilanova.html">Vila Nova</a>
     <a href="crb.html">CRB</a>
     <a href="athletico-pr.html">Athletico-PR</a>
-    <a href="athleticoclub.html">Athletic Club</a>
+    <a href="athleticlub.html">Athletic Club</a>
     <a href="operario.html">Operário</a>
     <a href="atletico-go.html">Atlético-GO</a>
     <a href="america-mg.html">América-MG</a>
     <a href="voltaredonda.html">Volta Redonda</a>
     <a href="paysandu.html">Paysandu</a>
-    <a href="operarioferroviario.htm">Operário Ferroviário</a>
+    <a href="operarioferroviario.html">Operário Ferroviário</a>
     <a href="amazonasfc.html">Amazonas FC</a>
     <a href="botafogo-sp.html">Botafogo-SP</a>
   </main>
