--- a/paginas/index.html
+++ b/paginas/index.html
@@ -93,7 +93,7 @@
     <a href="paysandu.html">Paysandu</a>
     <a href="operarioferroviario.html">Operário Ferroviário</a>
     <a href="amazonasfc.html">Amazonas FC</a>
-    <a href="botafogo-sp.html">Botafogo-SP</a>
+    <a href="fogo.html">Botafogo-SP</a>
   </main>
 
   <footer>
