--- a/paginas/america-mg.html
+++ b/paginas/america-mg.html
@@ -1,26 +1,85 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>América-MG - Série B 2025</title>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans&display=swap" rel="stylesheet" />
   <style>
     body {
-      background-color: #006400;
+      margin: 0;
+      padding: 0;
+      font-family: 'Open Sans', sans-serif;
+      background: linear-gradient(to bottom, #006400, #002200);
       color: #FFFFFF;
-      font-family: Georgia, serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
       text-align: center;
-      padding: 30px;
     }
-    img {
-      width: 150px;
+
+    header {
+      padding: 30px 20px;
+    }
+
+    h1 {
+      font-family: 'Merriweather', serif;
+      font-size: 2.8em;
+      margin: 0;
+      color: #ADFF2F;
+      text-shadow: 2px 2px #000;
+    }
+
+    .logo {
+      margin: 20px 0;
+      filter: drop-shadow(2px 2px 6px #000);
+    }
+
+    section {
+      background-color: rgba(255, 255, 255, 0.08);
+      padding: 25px;
+      border-radius: 15px;
+      width: 90%;
+      max-width: 600px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+      margin-bottom: 20px;
+    }
+
+    p {
+      font-size: 1.15em;
+      line-height: 1.6em;
+    }
+
+    strong {
+      color: #C6FFD9;
+    }
+
+    footer {
+      margin-top: auto;
+      padding: 15px;
+      font-size: 0.85em;
+      color: #BBB;
     }
   </style>
 </head>
 <body>
-  <h1>América Futebol Clube</h1>
-  <img src="https://upload.wikimedia.org/wikipedia/pt/8/88/Am%C3%A9rica_Mineiro.png" alt="Escudo América-MG">
-  <p><strong>Cidade:</strong> Belo Horizonte - MG</p>
-  <p><strong>Estádio:</strong> Independência</p>
-  <p><strong>Cores:</strong> Verde e Branco</p>
+  <header>
+    <h1>América Futebol Clube</h1>
+    <img class="logo" src="https://upload.wikimedia.org/wikipedia/pt/8/88/Am%C3%A9rica_Mineiro.png" alt="Escudo América-MG" width="150" />
+  </header>
+
+  <section>
+    <p><strong>Cidade:</strong> Belo Horizonte - MG</p>
+    <p><strong>Estádio:</strong> Independência</p>
+    <p><strong>Fundação:</strong> 1912</p>
+    <p><strong>Cores:</strong> Verde e Branco</p>
+    <p><strong>Apelido:</strong> Coelho</p>
+    <p><strong>Destaque:</strong> Clube centenário, referência na formação de talentos e dono de uma das gestões mais sólidas do futebol mineiro</p>
+  </section>
+
+  <footer>
+    Série B 2025 • Página oficial criada por Hubert
+  </footer>
 </body>
 </html>
