--- a/paginas/amazonasfc.html
+++ b/paginas/amazonasfc.html
@@ -65,7 +65,7 @@
 <body>
   <header>
     <h1>Amazonas Futebol Clube</h1>
-    <img class="../imagem/amafc.png" src="https://upload.wikimedia.org/wikipedia/pt/b/be/Amazonas_FC.png" alt="Escudo Amazonas" width="150" />
+    <img class="logo" src="../imagem/amafc.png" alt="Escudo Amazonas" width="150" />
   </header>
 
   <section>
