--- a/paginas/america-mg.html
+++ b/paginas/america-mg.html
@@ -66,7 +66,7 @@
 <body>
   <header>
     <h1>América Futebol Clube</h1>
-    <img class="logo" src="https://upload.wikimedia.org/wikipedia/pt/8/88/Am%C3%A9rica_Mineiro.png" alt="Escudo América-MG" width="150" />
+    <img class="logo" src="https://en.wikipedia.org/wiki/Volta_Redonda_FC#/media/File:Volta_Redonda_Futebol_Clube.png" alt="Escudo América-MG" width="150" />
   </header>
 
   <section>
