--- a/paginas/athleticlub.html
+++ b/paginas/athleticlub.html
@@ -66,7 +66,7 @@
 <body>
   <header>
     <h1>Athletic Club</h1>
-    <img class="logo" src="https://upload.wikimedia.org/wikipedia/en/thumb/9/98/Athletic_Club.svg/800px-Athletic_Club.svg.png" alt="Escudo Athletic Club" width="150" />
+    <img class="logo" src="../imagem/atclub.png" alt="Escudo Athletic Club" width="150" />
   </header>
 
   <section>
