--- a/paginas/athletico-pr.html
+++ b/paginas/athletico-pr.html
@@ -66,7 +66,7 @@
 <body>
   <header>
     <h1>Club Athletico Paranaense</h1>
-    <img class="logo" src="https://seeklogo.com/images/A/athletico-paranaense-logo-343786B7E3-seeklogo.com.png" alt="Escudo Athletico-PR" width="150" />
+    <img class="logo" src="../imagem/atpr.png" alt="Escudo Athletico-PR" width="150" />
   </header>
 
   <section>
