--- a/paginas/atletico-go.html
+++ b/paginas/atletico-go.html
@@ -66,7 +66,7 @@
 <body>
   <header>
     <h1>Atlético Clube Goianiense</h1>
-    <img class="logo" src="https://upload.wikimedia.org/wikipedia/pt/3/3f/Atl%C3%A9tico_Clube_Goianiense_logo.png" alt="Escudo Atlético-GO" width="150" />
+    <img class="logo" src="../imagem/atgo.png" alt="Escudo Atlético-GO" width="150" />
   </header>
 
   <section>
