--- a/paginas/avai.html
+++ b/paginas/avai.html
@@ -65,7 +65,7 @@
 <body>
   <header>
     <h1>Avaí Futebol Clube</h1>
-    <img class="logo" src="https://upload.wikimedia.org/wikipedia/pt/5/5d/Ava%C3%AD_Futebol_Clube.png" alt="Escudo Avaí" width="150" />
+    <img class="avai.png" alt="Escudo Avaí" width="150" />
   </header>
 
   <section>
