--- a/paginas/avai.html
+++ b/paginas/avai.html
@@ -65,7 +65,7 @@
 <body>
   <header>
     <h1>Avaí Futebol Clube</h1>
-    <img class="avai.png" alt="Escudo Avaí" width="150" />
+    <img class="logo"scr="../imagens/avai.png" alt="Escudo Avaí" width="150" />
   </header>
 
   <section>
