--- a/paginas/clubedoremo.html
+++ b/paginas/clubedoremo.html
@@ -66,7 +66,7 @@
 <body>
   <header>
     <h1>Clube do Remo</h1>
-    <img class="logo" src="https://seeklogo.com/images/C/clube-do-remo-pa-logo-341403E3E3-seeklogo.com.png" alt="Escudo Clube do Remo" width="150" />
+    <img class="logo" src="../imagem/remo.png" alt="Escudo Clube do Remo" width="150" />
   </header>
 
   <section>
