--- a/paginas/coritiba.html
+++ b/paginas/coritiba.html
@@ -65,7 +65,7 @@
 <body>
   <header>
     <h1>Coritiba Foot Ball Club</h1>
-    <img class="logo" src="https://upload.wikimedia.org/wikipedia/pt/3/3c/Coritiba_Foot_Ball_Club.png" alt="Escudo Coritiba" width="150" />
+    <img class="logo" src="../imagem/coritiba.png" alt="Escudo Coritiba" width="150" />
   </header>
 
   <section>
