--- a/paginas/crb.html
+++ b/paginas/crb.html
@@ -64,7 +64,7 @@
 <body>
   <header>
     <h1>Clube de Regatas Brasil</h1>
-    <img class="logo" src="https://upload.wikimedia.org/wikipedia/pt/e/e9/CRB_logo.png" alt="Escudo CRB" width="150" />
+    <img class="logo" src="../imagem/crb.png" alt="Escudo CRB" width="150" />
   </header>
 
   <section>
