--- a/paginas/criciuma.html
+++ b/paginas/criciuma.html
@@ -65,7 +65,7 @@
 <body>
   <header>
     <h1>Criciúma Esporte Clube</h1>
-    <img class="logo" src="https://seeklogo.com/images/C/criciuma-esporte-clube-logo-233714E3E3-seeklogo.com.png" alt="Escudo Criciúma" width="150" />
+    <img class="logo" src="../imagem/cricri.png" alt="Escudo Criciúma" width="150" />
   </header>
 
   <section>
