--- a/paginas/cuiaba.html
+++ b/paginas/cuiaba.html
@@ -65,7 +65,7 @@
 <body>
   <header>
     <h1>Cuiabá Esporte Clube</h1>
-    <img class="logo" src="https://upload.wikimedia.org/wikipedia/pt/2/2c/Cuiab%C3%A1_Esporte_Clube_logo.png" alt="Escudo Cuiabá" width="150" />
+    <img class="logo" src="../imagem/cuiaba.png" alt="Escudo Cuiabá" width="150" />
   </header>
 
   <section>
