--- a/paginas/fogo.html
+++ b/paginas/fogo.html
@@ -66,7 +66,7 @@
 <body>
   <header>
     <h1>Botafogo Futebol Clube (SP)</h1>
-    <img class="logo" src="https://upload.wikimedia.org/wikipedia/pt/0/01/Botafogo-SP.png" alt="Escudo Botafogo-SP" width="150" />
+    <img class="logo" src="../imagem/fogo.svg" alt="Escudo Botafogo-SP" width="150" />
   </header>
 
   <section>
