--- a/paginas/goias.html
+++ b/paginas/goias.html
@@ -66,7 +66,7 @@
 <body>
   <header>
     <h1>Goiás Esporte Clube</h1>
-    <img class="logo" src="https://upload.wikimedia.org/wikipedia/en/thumb/9/9e/Goias_Esporte_Clube_logo.svg/800px-Goias_Esporte_Clube_logo.svg.png" alt="Escudo Goiás" width="150" />
+    <img class="logo" src="../imagem/goias.svg" alt="Escudo Goiás" width="150" />
   </header>
 
   <section>
