--- a/paginas/ituanofc.html
+++ b/paginas/ituanofc.html
@@ -64,7 +64,7 @@
 <body>
   <header>
     <h1>Ituano Futebol Clube</h1>
-    <img class="logo" src="https://upload.wikimedia.org/wikipedia/pt/d/d2/Ituano_Futebol_Clube.png" alt="Escudo Ituano" width="150" />
+    <img class="logo" src="../imagem/itau.png" alt="Escudo Ituano" width="150" />
   </header>
 
   <section>
