--- a/paginas/vilanova.html
+++ b/paginas/vilanova.html
@@ -65,7 +65,7 @@
 <body>
   <header>
     <h1>Vila Nova Futebol Clube</h1>
-    <img class="logo" src="https://upload.wikimedia.org/wikipedia/pt/c/c9/Vila_Nova_Futebol_Clube.png" alt="Escudo Vila Nova" width="150" />
+    <img class="logo" src="vila.png" alt="Escudo Vila Nova" width="150" />
   </header>
 
   <section>
