--- a/paginas/operarioferroviario.html
+++ b/paginas/operarioferroviario.html
@@ -65,7 +65,7 @@
 <body>
   <header>
     <h1>Operário Ferroviário Esporte Clube</h1>
-    <img class="logo" src="https://upload.wikimedia.org/wikipedia/pt/2/29/Oper%C3%A1rio_Ferrovi%C3%A1rio_Esporte_Clube.png" alt="Escudo Operário-PR" width="150" />
+    <img class="logo" src="operaferro.png" alt="Escudo Operário-PR" width="150" />
   </header>
 
   <section>
