--- a/paginas/america-mg.html
+++ b/paginas/america-mg.html
@@ -66,7 +66,7 @@
 <body>
   <header>
     <h1>América Futebol Clube</h1>
-    <img class="logo" src="../imagem/amaricamg.svg" alt="Escudo América-MG" width="150" />
+    <img class="logo" src="../imagem/americamg.svg" alt="Escudo América-MG" width="150" />
   </header>
 
   <section>
