--- a/paginas/voltaredonda.html
+++ b/paginas/voltaredonda.html
@@ -65,7 +65,7 @@
 <body>
   <header>
     <h1>Volta Redonda Futebol Clube</h1>
-    <img class="logo" src="https://upload.wikimedia.org/wikipedia/pt/1/1b/Volta_Redonda_Futebol_Clube.png" alt="Escudo Volta Redonda" width="150" />
+    <img class="logo" src="volta.png" alt="Escudo Volta Redonda" width="150" />
   </header>
 
   <section>
