--- a/paginas/operarioferroviario.html
+++ b/paginas/operarioferroviario.html
@@ -65,7 +65,7 @@
 <body>
   <header>
     <h1>Operário Ferroviário Esporte Clube</h1>
-    <img class="logo" src="operaferro.png" alt="Escudo Operário-PR" width="150" />
+    <img class="logo" src="../imagem/operaferro.png" alt="Escudo Operário-PR" width="150" />
   </header>
 
   <section>
