--- a/paginas/pontepreta.html
+++ b/paginas/pontepreta.html
@@ -66,7 +66,7 @@
 <body>
   <header>
     <h1>Associação Atlética Ponte Preta</h1>
-    <img class="logo" src="https://upload.wikimedia.org/wikipedia/pt/5/5b/Ponte_Preta.png" alt="Escudo Ponte Preta" width="150" />
+    <img class="logo" src="../imagem/ponte.png" alt="Escudo Ponte Preta" width="150" />
   </header>
 
   <section>
