--- a/paginas/paysandu.html
+++ b/paginas/paysandu.html
@@ -64,7 +64,7 @@
 <body>
   <header>
     <h1>Paysandu Sport Club</h1>
-    <img class="logo" src="PaysanduSC.png" alt="Escudo Paysandu" width="150">
+    <img class="logo" src="../imagem/PaysanduSC.png" alt="Escudo Paysandu" width="150">
   </header>
 
   <section>
