--- a/paginas/novorizontino.html
+++ b/paginas/novorizontino.html
@@ -66,7 +66,7 @@
 <body>
   <header>
     <h1>Grêmio Novorizontino</h1>
-    <img class="logo" src="novo.png" alt="Escudo Novorizontino" width="150" />
+    <img class="logo" src="../imagem/novo.png" alt="Escudo Novorizontino" width="150" />
   </header>
 
   <section>
