--- a/paginas/avai.html
+++ b/paginas/avai.html
@@ -21,18 +21,24 @@
 
     header {
       padding: 30px 20px;
+      animation: fadeIn 1.5s ease-in-out;
     }
 
     h1 {
       font-family: 'Titillium Web', sans-serif;
       font-size: 2.8em;
       margin: 0;
-      text-shadow: 1px 1px #000;
+      text-shadow: 1px 1px 3px #000;
     }
 
     .logo {
       margin: 20px 0;
       filter: drop-shadow(2px 2px 6px #000);
+      transition: transform 0.3s ease;
+    }
+
+    .logo:hover {
+      transform: scale(1.05);
     }
 
     section {
@@ -43,6 +49,7 @@
       max-width: 600px;
       box-shadow: 0 5px 15px rgba(0,0,0,0.3);
       margin-bottom: 20px;
+      animation: slideUp 1.2s ease;
     }
 
     p {
@@ -60,12 +67,22 @@
       font-size: 0.85em;
       color: #BBB;
     }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes slideUp {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
   </style>
 </head>
 <body>
   <header>
     <h1>Avaí Futebol Clube</h1>
-    <img class="logo" scr="a.png" alt="Escudo Avaí" width="150" />
+    <img class="logo" src="a.png" alt="Escudo Avaí" width="150" />
   </header>
 
   <section>
@@ -74,7 +91,7 @@
     <p><strong>Fundação:</strong> 1923</p>
     <p><strong>Cores:</strong> Azul e Branco</p>
     <p><strong>Apelido:</strong> Leão da Ilha</p>
-    <p><strong>Destaque:</strong> Clube tradicional com presença frequente nas principais divisões do futebol brasileiro e torcida fiel na Ilha de Santa Catarina</p>
+    <p><strong>Destaque:</strong> Clube tradicional com presença frequente nas principais divisões do futebol brasileiro e torcida fiel na Ilha de Santa Catarina.</p>
   </section>
 
   <footer>
