--- a/paginas/index.html
+++ b/paginas/index.html
@@ -103,7 +103,7 @@
     <a href="atletico-go.html">Atlético-GO</a>
     <a href="athleticlub.html">Athletic Club-MG</a>
     <a href="avai.html">Avaí</a>
-    <a href="bota-sp.html">Botafogo-SP</a>
+    <a href="fogo.html">Botafogo-SP</a>
     <a href="chapecoense.html">Chapecoense</a>
     <a href="clubedoremo.html">Clube do Remo</a>
     <a href="coritiba.html">Coritiba</a>
